--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -7,10 +7,9 @@
 <body>
 
 <h1>Create Event</h1>
-<form method="post" action="/event/create">
+<form method="post" action="/events/create">
     <input type="text" name="eventName">
     <input type="submit" value="Create Event">
-
 </form>
 
 </body>
