--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
-<head th:replace="fragments :: head"></head>
-<body class="container">>
+<head th:replace="~{fragments :: head}"></head>
+<body class="container">
 
 <h1>Create Event</h1>
-<nav th:replace="fragments :: navigation"></nav>
+<nav th:replace="~{fragments :: navigation}"></nav>
 
-<form method="post" action="/events/create">
+<form method="post" th:action="@{/events/create}">
     <div class="form-group">
         <label>Name
             <input type="text" name="eventName" class="form-control">
