--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head th:replace="fragments :: head"></head>
+<head th:replace="~{fragments :: head}"></head>
 <body class="container">
 
 
-<header th:replace="fragments :: header"></header>
+<!--<header th:replace="~{fragments :: header}"></header>-->
+<nav th:replace="~{fragments :: navigation}"></nav>
+
+<h1 th:text="${title}"></h1>
 
 <table class="table table-striped">
     <thead>
@@ -14,7 +17,7 @@
     </thead>
 
     <tr th:each="event : ${events}">
-        <td th:text="${event}"></td>
+        <td th:text="${event.name}"></td>
     </tr>
 </table>
 
