--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
-<head th:fragment="head">
+<head th:fragment = "head">
     <meta charset="UTF-8">
     <title>Coding Events</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
@@ -16,6 +16,14 @@
         <li class="nav-item"><a class="nav-link" href="/events/create">Create Event</a></li>
     </ul>
 </nav>
+
+<!--<nav th:fragment="header">-->
+<!--    <h1 th:text="${title}">Coding Events</h1>-->
+<!--    <ul class="nav">-->
+<!--        <li class="nav-item"><a class="nav-link" href="/events">All Events</a></li>-->
+<!--        <li class="nav-item"><a class="nav-link" href="/events/create">Create Event</a></li>-->
+<!--    </ul>-->
+<!--</nav>-->
 
 </body>
 </html>
