--- a/src/main/resources/templates/events/edit.html
+++ b/src/main/resources/templates/events/edit.html
@@ -6,7 +6,13 @@
 <h1>Create Event</h1>
 <nav th:replace="~{fragments :: navigation}"></nav>
 
-<form method="post" th:action="@{/events/create}">
+<form method="post" th:action="@{/events/edit}">
+    <div class="form-group">
+        <label>ID
+            <input type="hidden" th:value="${event.id}" name="eventId"/>
+        </label>
+    </div>
+
     <div class="form-group">
         <label>Name
             <input type="text" name="name" class="form-control">
